ags (0.8.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags.rc to support AgsMidiExportWizard and AgsMidiImportWizard
	* improved ags.rc to provide better color of active text
	* improved Makefile.am
	* added gettext support

ags (0.8.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* optional libinstpatch dependency
	* implemented AgsEnvelopeDialog
	* refactored ags-envelope recall to use AgsComplex fields of AgsNote
	* added AgsEnvelopeDialog to AgsDrum, AgsMatrix, AgsDssiBridge and AgsLv2Bridge
	* added ags-envelope recall to ags_recall_factory.c
	* fixed unavailable AgsMidiDialog as doing delete-event
	* fixed functional test timed access to widget

ags (0.8.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented MIDI import tracks
	* implemented MIDI export tracks
	* fixed AgsMidiBuilder serious problems
	* fixed ags_midi_buffer_util_seek()
	* fixed AgsMidiParser using wrong tempo and time signature allocation
	* fixed ags_midi_buffer_util.c same issue as above with tempo and time signature

ags (0.7.136)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved performance of AgsGuiThread to consume less power
	* improved AgsMidiin to don't poll anymore in dedicated thread
	* improved AgsLog to have a mutex and use it during splash-screen

ags (0.7.135)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented Lv2 program interface
	* implemented ags-play-dssi and ags-play-lv2 recall
	* implemented AgsLiveDssiBridge and AgsLiveLv2Bridge
	* fixed non-interleave lv2 audio data processing
	* support NULL input

ags (0.7.134)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* merge stable
	* ?

ags (0.7.133)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing reset of connection editor field of machine
	* fixed wrong subtract one of audio channels in bulk connection
	* fixed configuration to clear old config